feat: insert promoted search slots from allocations
Co-Authored-By: Claude <noreply@anthropic.com>